Fixed horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ div.box {
 .mySlides {
     display: none;
     width: 100%;
-
 }
+
 .w3-left, .w3-right, .w3-badge {
     cursor: pointer
 }
@@ -174,14 +174,14 @@ div.box {
 }
 
 .banner-contact {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 /*Now the styles*/
 * {
     margin: 0;
-	padding: 0;
+    padding: 0;
 }
 
 /*Time to apply widths for accordian to work
@@ -194,62 +194,69 @@ default width = 800/5 = 160px;
 */
 
 .accordian {
-	width: 100%; height: 50%;
-	overflow: hidden;
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
 
-	/*Time for some styling*/
-	margin: 0 auto;
-	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
-	-webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
-	-moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
-	float: left;
+    /*Time for some styling*/
+    margin: 0 auto;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
+    float: left;
 }
 
 .accordian li {
-	position: relative;
-	display: block;
-	width: 20%;
-	float: left;
+    position: relative;
+    display: block;
+    width: 20%;
+    float: left;
 
-	border-left: 1px solid #888;
+    border-left: 1px solid #888;
 
-	box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
-	-webkit-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
 
-	/*Transitions to give animation effect*/
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-	/*If you hover on the images now you should be able to
-	see the basic accordian*/
+    /*Transitions to give animation effect*/
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    /*If you hover on the images now you should be able to
+    see the basic accordian*/
 }
 
 /*Reduce with of un-hovered elements*/
-.accordian ul:hover li {width: 5%;}
+.accordian ul:hover li {
+    width: 5%;
+}
+
 /*Lets apply hover effects now*/
 /*The LI hover style should override the UL hover style*/
-.accordian ul li:hover {width: 80%;}
-
+.accordian ul li:hover {
+    width: 80%;
+}
 
 .accordian li img {
-	display: block;
+    display: block;
 }
 
 /*Image title styles*/
 .image_title {
-	background: rgba(0, 0, 0, 0.5);
-	position: absolute;
-	left: 0; bottom: 0;
-width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 
 }
+
 .image_title div {
-	display: block;
-	color: #fff;
-	text-decoration: none;
-	padding: 20px;
-	font-size: 16px;
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 20px;
+    font-size: 16px;
 }
 
 .close {
